Fix OmniView Jetty 12 ResourceHandler initialization
Changed SpaHandler from Handler.Abstract to Handler.Wrapper so the
wrapped ResourceHandler is properly included in the handler chain.
This ensures ResourceHandler gets started with the server and its
_contentFactory is initialized, fixing the NullPointerException.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>